--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,212 @@
- 
+:root {
+  --primary-text-color: #212121;
+  --basic-color: #ffffff;
+  --accent-color: #2196f3;
+  --text-size: 14px;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: #f5f5f5;
+  color: var(--primary-text-color);
+}
+
+/*-----------LOGO----------*/
+.link {
+  text-decoration: none;
+}
+.list {
+  list-style-type: none;
+}
+.logo {
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+}
+.logo.header-logo {
+  font-family: "Raleway", sans-serif;
+  color: #000000;
+}
+.logo span {
+  color: var(--accent-color);
+}
+.logo.footer-logo {
+  font-family: "Raleway", sans-serif;
+  color: var(--basic-color);
+}
+
+/*-------HEADER----------*/
+.header {
+  background-color: var(--basic-color);
+}
+
+.header-list {
+  font-weight: 500;
+  font-size: var(--text-size);
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
+.header-item {
+  color: var(--primary-text-color);
+}
+
+.header-contact {
+  color: #757575;
+}
+.header-item:hover,
+.header-item:focus {
+  color: var(--accent-color);
+}
+
+.header-list .header-item.current {
+  color: var(--accent-color);
+}
+.header-contact:hover,
+.header-contact:focus {
+  color: var(--accent-color);
+}
+/*------------HERO------------*/
+.hero {
+  background-color: #2f303a;
+}
+.hero-title {
+  color: var(--basic-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+}
+.hero-button {
+  font-family: inherit;
+  background-color: var(--accent-color);
+  color: var(--basic-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+
+.hero-button:hover,
+.hero-button:focus {
+  background-color: #188ce8;
+}
+/*------ОСОБЛИВОСТІ-------*/
+}
+
+.text-title {
+  font-size: var(--text-size) ;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.text-aside {
+  font-size: var(--text-size);
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+/*--------------СЕКЦІЇ---------*/
+.studio-title {
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+}
+.team {
+  background-color: #f5f4fa;
+}
+
+.team-list {
+  background-color: var(--basic-color);
+}
+
+.team-name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+}
+
+.team-text {
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+/*-------------FOOTER----------------*/
+.footer {
+  background-color: #2f303a;
+}
+
+.footer-place,
+.footer-contact {
+  font-style: normal;
+  font-weight: 400;
+  font-size: var(--text-size);
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.footer-contact.place {
+  color: var(--basic-color);
+}
+
+.footer-contact {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-contact:hover,
+.footer-contact:focus {
+  color: var(--accent-color);
+}
+
+/*---------------PORTFOLIO-------------------*/
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+/*------------BUTTONS----------------*/
+.btn {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  background-color: #f5f4fa;
+  color: var(--primary-text-color);
+  cursor: pointer;
+}
+
+.btn:hover,
+.btn:focus {
+  background: var(--accent-color);
+  color: var(--basic-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+/*------------LIST-----------*/
+.portfolio-subject {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--primary-text-color);
+}
+.portfolio-text {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
