--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   border-color: transparent;
-  border-radius: 4px
+  border-radius: 4px;
 }
 
 .hero-button:hover,
@@ -100,10 +100,9 @@ body {
   background-color: #188ce8;
 }
 /*------ОСОБЛИВОСТІ-------*/
-}
 
 .text-title {
-  font-size: var(--text-size) ;
+  font-size: var(--text-size);
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -115,7 +114,7 @@ body {
   color: var(--small-text-color);
 }
 /*--------------СЕКЦІЇ---------*/
-.background{
+.background {
   background-color: var(--basic-color);
 }
 .studio-title {
