--- a/css/styles.css
+++ b/css/styles.css
@@ -41,10 +41,6 @@ body {
 }
 
 /*-------HEADER----------*/
-.header {
-  background-color: var(--basic-color);
-}
-
 .header-link {
   font-weight: 500;
   font-size: var(--text-size);
@@ -93,6 +89,7 @@ body {
   cursor: pointer;
   border-color: transparent;
   border-radius: 4px;
+  letter-spacing: 0.06em;
 }
 
 .hero-button:hover,
@@ -114,9 +111,6 @@ body {
   color: var(--small-text-color);
 }
 /*--------------СЕКЦІЇ---------*/
-.background {
-  background-color: var(--basic-color);
-}
 .studio-title {
   font-size: 36px;
   line-height: 1.16;
@@ -125,8 +119,9 @@ body {
 .team {
   background-color: var(--background-color);
 }
+
 .team-item {
-  background-color: var(--basic-color);
+  background-color: var(--second-basic-color);
 }
 
 .team-name {
@@ -151,7 +146,6 @@ body {
 .footer-place,
 .footer-contact {
   font-style: normal;
-  font-weight: 400;
   font-size: var(--text-size);
   line-height: 1.71;
   letter-spacing: 0.03em;
