--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ body {
 }
 .hero-button {
   font-family: inherit;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   background-color: var(--accent-color);
